# Mock-C-

./: CMakeLists.txt  Makefile  README.md  Requirement.txt  ZZtest.txt  main  tagreader
include/: MP3.h  MediaPlayer.h  PlayList.h  filename_utils.h  manager.h
src/: MP3.cpp  MediaPlayer.cpp  PlayList.cpp  filename_utils.cpp  main.cpp  manager.cpp
